<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/greyDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/resulf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/times2" />

        <View
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/start_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue_smallradius"
            android:drawableLeft="@mipmap/fanxian"
            android:gravity="center_vertical"
            android:text="@string/drive_start_false" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drive_mileage"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/call_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue_smallradius"
            android:drawableLeft="@mipmap/call2"
            android:gravity="center_vertical"
            android:text="@string/drive_call_customer" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/call_customer_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue_smallradius"
            android:drawableLeft="@mipmap/service1"
            android:gravity="center_vertical"
            android:text="@string/drive_call_customer_service" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_white_back"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/drive_wait_time"
                android:textColor="@color/white"
                android:textSize="10sp" />






            <Chronometer
                android:id="@+id/wait_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="12dp"
                android:format="00:00"
                android:textColor="@color/white"
                android:textSize="18sp" />

           <!--
            <TextView
                android:id="@+id/wait_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="12dp"
                android:text="00:25"
                android:textColor="@color/white"
                android:textSize="18sp" />-->


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/bg_white_back"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/drive_drive_mileage"
                android:textColor="@color/white"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/mileage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="12dp"
                android:layout_marginRight="12dp"
                android:text="2.0km"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_white_back">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="6dp"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:text="@string/drive_pay_time"
                android:id="@+id/textView3" />

            <Chronometer
                android:layout_width="wrap_content"
                android:layout_marginRight="13dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:id="@+id/travel_time"
                android:layout_height="wrap_content"
                android:format="00:00"
                android:layout_marginEnd="13dp"
                android:layout_below="@+id/textView3"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
<!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:textColor="@color/white"
                android:layout_marginBottom="12dp"
                android:textSize="18sp"
                android:id="@+id/travel_time"
                android:layout_height="wrap_content"
                android:text="03:18"/>-->


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_white_back">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="6dp"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:text="@string/drive_pay_money"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:textColor="@color/white"
                android:layout_marginBottom="12dp"
                android:textSize="18sp"
                android:id="@+id/driving_amount"
                android:layout_height="wrap_content"
                android:text="20元"/>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/button_start_wait_end"
            android:layout_width="120dp"
            android:text="@string/drive_start_wait"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/bg_white_back"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/button_order_end"
            android:layout_width="120dp"
            android:text="@string/drive_start_wait"
            android:layout_marginLeft="30dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/bg_black_back"
            android:layout_height="30dp"/>
    </LinearLayout>


</LinearLayout>